<resources>
    <string name="app_name">Android组件库</string>
    <string name="action_settings">Settings</string>

    <!-- 分享 -->
    <string name="share">分享</string>
    <string name="share_title">分享到</string>
    <string name="moments">朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>

    <!-- button -->
    <string name="horizontal_single">横向单行</string>
    <string name="horizontal_multi">横向多行</string>
    <string name="vertical">竖向</string>
    <string name="grid">网格</string>

    <!-- item -->
    <string name="delete">删除</string>
    <string name="add_item">添加</string>
    <string name="title_item">功能</string>

    <!--    功能性标题栏-->
    <string name="left_title">我是标题</string>
    <string name="right_message">我是描述</string>
    <string name="right_hint">我是默认提示文案</string>
    <string name="right_input">我是输入后文案</string>
    <string name="right_content">我是内容</string>
    <string name="left_subhead">我是副标题</string>
    <string name="right_content_message">我是内容说明</string>
    <string name="title">我是标题</string>
    <string name="option">选项</string>
</resources>
