<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnShowDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="show dialog!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/horizontal_single"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/horizontal_single" />

        <Button
            android:id="@+id/horizontal_multi"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/horizontal_multi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/vertical"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vertical" />

        <Button
            android:id="@+id/grid"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grid" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bottomListDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="底部列表弹框" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/jump2toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show Toast" />
    </LinearLayout>
    <Button
        android:id="@+id/jump2CenterDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="show center dialog"
        />

    <Button
        android:id="@+id/showAddressPickerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="show address picker view"
        />
</LinearLayout>